# luna

./: .gitignore  .mcp.json  404.html  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  README.md  RESEARCH.md  acknowledgements.html  index.html  print.html  rust-toolchain.toml  searchindex.js  searchindex.json
.claude/: settings.json
.claude/agents/: rust-code-improver.md
.claude/commands/: rebuild.md  reference-fetch.md  smoke-test.md
.claude/rules/: api-first.md  audible-fixes-test-first.md  coproc-testing.md  faithful-port-and-dichotomy.md  hdma-dma-faithful-audit.md  no-co-authored-by.md  rebuild-discipline.md  reference-first.md  rust-lint-discipline.md
.github/workflows/: ci.yml  docs.yml  release.yml  tom-harte.yml
api/: crates.js  help.html  index.html  settings.html  src-files.js
api/luna/: all.html  constant.NTSC_MCLK_PER_FRAME.html  enum.Command.html  fn.flag_string.html  fn.fmt_pc.html  fn.hex_str.html  fn.load_rom_into.html  fn.main.html  fn.parse_assert_spec.html  fn.parse_assert_spec_no_bank.html  fn.parse_hex_bytes.html  fn.parse_input_script.html  fn.parse_mouse_script.html  fn.parse_peek_spec.html  fn.print_cpu_state.html  fn.print_diag_state.html  fn.print_header.html  fn.print_hex_dump.html  fn.run.html  fn.run_assets_dump.html  fn.run_frames.html  fn.run_spc_dump.html  fn.run_state.html  fn.run_wram_trace.html  fn.save_screenshot.html  fn.serve_mcp.html  fn.write_cpu_trace_csv.html  fn.write_csv.html  fn.write_dma_trace_csv.html  fn.write_mailbox_log_csv.html  fn.write_mem_trace_csv.html  fn.write_sa1_log_csv.html  fn.write_sa1_side_log_csv.html  fn.write_sa1_trace_csv.html  fn.write_spc_trace_csv.html  fn.write_superfx_trace_csv.html  fn.write_wav.html  index.html  sidebar-items.js  struct.Cli.html  (+1 more)
api/luna_api/: all.html  constant.FRAME_H.html  constant.FRAME_W.html  constant.SAVE_STATE_VERSION.html  enum.ApiError.html  enum.MailboxEventKind.html  enum.MapperKind.html  enum.MemEventKind.html  enum.PortDevice.html  index.html  sidebar-items.js  struct.ApuState.html  struct.BgInfo.html  struct.CpuRegsState.html  struct.CpuState.html  struct.CpuTraceEvent.html  struct.CpuTraceLog.html  struct.DisasmLine.html  struct.DmaChannelState.html  struct.DmaState.html  struct.DmaTraceEvent.html  struct.DmaTraceLog.html  struct.Dsp1State.html  struct.Emulator.html  struct.EmulatorState.html  struct.LoopProbe.html  struct.MailboxEvent.html  struct.MemTraceLog.html  (+14 more)
book/: book.toml
crates/luna-api/: Cargo.toml
crates/luna-api/src/: event_viewer.rs  lib.rs
crates/luna-api/tests/: mouse.rs  reset_repro.rs  smoke.rs  superscope.rs
crates/luna-apu/: Cargo.toml
crates/luna-apu/src/: dsp.rs  lib.rs
crates/luna-async/: Cargo.toml
crates/luna-async/src/: lib.rs
crates/luna-bus/: Cargo.toml
crates/luna-bus/src/: bus.rs  hirom.rs  lib.rs  lorom.rs  mapper.rs  sa1.rs  sdd1.rs  speed.rs  superfx.rs  testing.rs  types.rs
crates/luna-cartridge/: Cargo.toml
crates/luna-cartridge/src/: lib.rs
crates/luna-cli/: Cargo.toml
crates/luna-cli/src/: bench.rs  main.rs
crates/luna-coproc/: Cargo.toml
crates/luna-coproc/src/: lib.rs  sa1.rs
crates/luna-core/: Cargo.toml
crates/luna-core/src/: apu_stub.rs  controller.rs  cpu_regs.rs  lib.rs  snes.rs
crates/luna-core/src/coproc/: dsp1.rs  mod.rs  sa1.rs
crates/luna-core/src/dma/: bus.rs  channel.rs  controller.rs  mod.rs
crates/luna-core/tests/: snes_test_roms.rs  spc_trajectory.rs
crates/luna-cpu-65c816/: Cargo.toml
crates/luna-cpu-65c816/src/: addressing.rs  cpu.rs  disasm.rs  flags.rs  lib.rs  opcodes.rs
crates/luna-cpu-65c816/tests/: tom_harte.rs
crates/luna-cpu-spc700/: Cargo.toml
crates/luna-cpu-spc700/src/: bus.rs  cpu.rs  cycles.rs  disasm.rs  flags.rs  iplrom.rs  lib.rs  opcodes.rs  step.rs  testing.rs
crates/luna-cpu-spc700/tests/: tom_harte.rs
crates/luna-cpu-upd96050/: Cargo.toml
crates/luna-cpu-upd96050/src/: lib.rs
crates/luna-dma/: Cargo.toml
crates/luna-dma/src/: channel.rs  controller.rs  lib.rs
crates/luna-gui/: Cargo.toml
crates/luna-gui/src/: app.rs  audio.rs  debug_window.rs  emu_thread.rs  input.rs  lib.rs  main.rs  ui.rs
crates/luna-mcp-client/: Cargo.toml
crates/luna-mcp-client/src/: lib.rs
crates/luna-mcp-core/: Cargo.toml
crates/luna-mcp-core/src/: lib.rs
crates/luna-mcp-server/: Cargo.toml
crates/luna-mcp-server/src/: lib.rs
crates/luna-overlay/: Cargo.toml
crates/luna-overlay/src/: lib.rs
crates/luna-ppu/: Cargo.toml
crates/luna-ppu/src/: lib.rs  memory.rs  ppu.rs  renderer.rs  tile.rs
docs/: CONTROLLER_BINDINGS.md  accuracy_scorecard.md  apu_dsp_reference.md  ares_ppu_notes.md  cli_api_reference.md  cooperative_scheduler_reference.md  cycle_accuracy_plan.md  emulator_comparison_ness_jgenesis.md  emulator_landscape.md  event_viewer_reference.md  firmware.md  gui_performance_scope.md  hdma_ares_audit.md  luna_65c816_gaps.md  luna_apu_gaps.md  luna_bg_gaps.md  luna_dma_gaps.md  luna_obj_gaps.md  luna_ppu_gaps.md  luna_ppu_inventory.md  luna_sa1_gaps.md  luna_spc700_gaps.md  luna_superfx_inventory.md  mesen2_ppu_notes.md  ppu_compositor_reference.md  roadmap_to_A.md  sa1_known_issues.md  sa1_status.md  sdd1_reference.md  smrpg_intro_sa1_divergence.md  test_corpora.md  yoshis_island_text_barcode_investigation.md
internals/: apu.html  architecture.html  coprocessors-sa1.html  coprocessors-sdd1.html  coprocessors-superfx.html  coprocessors.html  cpus.html  memory-dma-bus.html  ppu.html
method/: accuracy.html  determinism.html  differential.html  faithful-port.html  road-to-a.html  testing.html
tools/: audio_goldens.py  capture-kirby-ref-trace.md  capture-pitchmod-ref-check.md  diff-wram-hashes.py  fetch-snes-test-roms.sh  fetch-tom-harte-spc700.sh  fetch-tom-harte.sh  irq-trace-diff.py  kirby-boot-ref-trace.lua  mesen-irq-trace.lua  mesen-wram-dump.lua  mesen-wram-hash.lua  pitchmod-ref-check.lua  restore-test-corpus.sh  snes-gsu-state-keys.lua  snes-gsu-trajectory-capture.lua  snes-wram-perframe-hash.lua  superfx-trace-diff.md  validate-hdma-corpus.sh
using/: cli-api-mcp.html  controls.html  debugging.html  install.html  saves.html
(+785 files in other folders)
