[workspace]
resolver = "2"
members = [
    "crates/luna-async",
    "crates/luna-api",
    "crates/luna-apu",
    "crates/luna-bus",
    "crates/luna-cartridge",
    "crates/luna-cli",
    "crates/luna-coproc",
    "crates/luna-core",
    "crates/luna-cpu-65c816",
    "crates/luna-cpu-spc700",
    "crates/luna-dma",
    "crates/luna-gui",
    "crates/luna-mcp-client",
    "crates/luna-mcp-core",
    "crates/luna-mcp-server",
    "crates/luna-overlay",
    "crates/luna-ppu",
]

[workspace.package]
version = "0.0.1"
edition = "2024"
rust-version = "1.85"
license = "MPL-2.0"
authors = ["Luna contributors"]
repository = "https://github.com/kobenairb/luna"
readme = "README.md"

[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "warn"
unreachable_pub = "warn"

[workspace.lints.clippy]
# `all` covers correctness + suspicious + complexity + style + perf — the
# real-bug groups. `pedantic` is intentionally off for now: many of its
# lints are stylistic and would create noise during Phase 0; we'll
# evaluate switching it on once the codebase is mature.
all = { level = "warn", priority = -1 }
# Specific opt-ins (uncomment as we're ready to triage):
# pedantic = { level = "warn", priority = -1 }

[workspace.dependencies]
# Cœur d'émulation
luna-api          = { path = "crates/luna-api", version = "0.0.1" }
luna-apu          = { path = "crates/luna-apu", version = "0.0.1" }
luna-async        = { path = "crates/luna-async", version = "0.0.1" }
luna-bus          = { path = "crates/luna-bus", version = "0.0.1" }
luna-cartridge    = { path = "crates/luna-cartridge", version = "0.0.1" }
luna-coproc       = { path = "crates/luna-coproc", version = "0.0.1" }
luna-core         = { path = "crates/luna-core", version = "0.0.1" }
luna-cpu-65c816   = { path = "crates/luna-cpu-65c816", version = "0.0.1" }
luna-cpu-spc700   = { path = "crates/luna-cpu-spc700", version = "0.0.1" }
luna-dma          = { path = "crates/luna-dma", version = "0.0.1" }
luna-mcp-client   = { path = "crates/luna-mcp-client", version = "0.0.1" }
luna-mcp-core     = { path = "crates/luna-mcp-core", version = "0.0.1" }
luna-mcp-server   = { path = "crates/luna-mcp-server", version = "0.0.1" }
luna-overlay      = { path = "crates/luna-overlay", version = "0.0.1" }
luna-ppu          = { path = "crates/luna-ppu", version = "0.0.1" }

# Externals (versions pinned plus tard quand on les utilisera vraiment)
serde       = { version = "1", default-features = false, features = ["derive"] }
serde_json  = { version = "1", default-features = false, features = ["alloc"] }
thiserror   = "2"
tracing     = "0.1"
futures     = { version = "0.3", default-features = false, features = ["alloc"] }

# Async runtimes — pour la façade luna-async
tokio                = { version = "1", default-features = false }
wasm-bindgen-futures = "0.4"
gloo-timers          = { version = "0.3", features = ["futures"] }

# CLI
clap                 = { version = "4", features = ["derive"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"

[profile.dev]
opt-level = 1   # Émulation à vitesse acceptable même en dev
