[workspace]
resolver = "2"
members = [
    "crates/luna-api",
    "crates/luna-apu",
    "crates/luna-bus",
    "crates/luna-cartridge",
    "crates/luna-cli",
    "crates/luna-core",
    "crates/luna-cpu-65c816",
    "crates/luna-cpu-spc700",
    "crates/luna-cpu-upd96050",
    "crates/luna-gui",
    "crates/luna-mcp-server",
    "crates/luna-ppu",
]

[workspace.package]
version = "0.3.0"
edition = "2024"
rust-version = "1.85"
license = "MPL-2.0"
authors = ["Luna contributors"]
repository = "https://github.com/kobenairb/luna"
readme = "README.md"

[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "warn"
unreachable_pub = "warn"

[workspace.lints.clippy]
# `all` covers correctness + suspicious + complexity + style + perf —
# the real-bug groups. `pedantic` is on so style/clarity nits get
# flagged too. `nursery` collects unstable but generally useful lints.
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

# ── Domain-legitimate suppressions ──────────────────────────────────
# luna emulates 8/16-bit SNES hardware. Truncating + wrapping casts on
# integer types are the *operation* we're modelling, not a bug. The
# alternatives (TryFrom + unreachable / Wrapping<u8>) would clutter
# every PPU / CPU register store without making the code safer.
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_sign_loss = "allow"
cast_lossless = "allow"

# Opcode dispatchers, scheduler tables, PPU tile decoders and similar
# data-driven routines are large by nature. The structural-length
# pedantic lints would force a refactor that obscures the per-opcode
# layout that mirrors the SNES manual.
too_many_lines = "allow"
too_many_arguments = "allow"

# bools-in-struct heuristic flags state machines (PPU window enables,
# CPU flag bytes, joypad mask containers). Those are deliberate.
struct_excessive_bools = "allow"
fn_params_excessive_bools = "allow"

# Inline format args is style-only and explosively common in print!
# tracers; not worth the diff churn.
uninlined_format_args = "allow"

# Pedantic flags `if let Some(x) = … else { … }` chains; rewriting them
# as `map_or` reads worse for the kind of two-branch register dispatch
# we have throughout.
option_if_let_else = "allow"

# Many SNES register decoders mirror the bit/byte structure of the
# real hardware (e.g. NMITIMEN bits 7/5/4/0 each going to a distinct
# field). The "missing examples" / "must use" lints add noise to those
# without improving clarity.
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

# Nursery: redundant_pub_crate flags `pub(crate)` items used in only
# one module — true on V0 internals that will grow into the public API.
redundant_pub_crate = "allow"

# `(x & 0xFF) == 0` reads as "low byte is zero" — the form the SNES
# manual uses. The trailing_zeros rewrite is a less-direct expression
# of the same intent. Style-only lint.
verbose_bit_mask = "allow"

# Audio path converts i16 PCM samples to f32 via `as f32`, which
# pedantic flags as precision loss. The conversion is exact for the
# i16 input range; we depend on it for resampling math.
cast_precision_loss = "allow"

# DSP / opcode code uses single-letter math symbols (l, r, a, n, t)
# that mirror the textbook formulas. Renaming them to verbose forms
# would obscure rather than clarify.
similar_names = "allow"
many_single_char_names = "allow"

# MMIO register decoders and memory-speed tables explicitly enumerate
# bank ranges + register addresses we accept-but-don't-yet-model.
# The repetition is documentation — merging arms would hide which
# registers / banks are intentionally noted vs. silently caught by
# the wildcard.
match_same_arms = "allow"

# SNES register / instruction docs naturally describe the full
# mechanic in the first paragraph (bit layout, side effects, the
# canonical fullsnes / ares reference). Forcing a synthetic break
# after one sentence would split related context.
too_long_first_doc_paragraph = "allow"

[workspace.dependencies]
# Cœur d'émulation
luna-api          = { path = "crates/luna-api", version = "0.3.0" }
luna-apu          = { path = "crates/luna-apu", version = "0.3.0" }
luna-bus          = { path = "crates/luna-bus", version = "0.3.0" }
luna-cartridge    = { path = "crates/luna-cartridge", version = "0.3.0" }
luna-core         = { path = "crates/luna-core", version = "0.3.0" }
luna-cpu-65c816   = { path = "crates/luna-cpu-65c816", version = "0.3.0" }
luna-cpu-spc700   = { path = "crates/luna-cpu-spc700", version = "0.3.0" }
luna-cpu-upd96050 = { path = "crates/luna-cpu-upd96050", version = "0.3.0" }
luna-mcp-server   = { path = "crates/luna-mcp-server", version = "0.3.0" }
luna-ppu          = { path = "crates/luna-ppu", version = "0.3.0" }

# Externals (versions pinned plus tard quand on les utilisera vraiment)
serde       = { version = "1", default-features = false, features = ["derive"] }
serde_json  = { version = "1", default-features = false, features = ["alloc"] }
# Compact binary (de)serialisation for save states. Pure-Rust, wasm-ok.
bincode     = "1.3"
# Efficient (de)serialisation of byte arrays (`[u8; N]` for N > 32, which
# serde's stock impls do not cover) — used by save-state on RAM/cache arrays.
serde_bytes = "0.11"
thiserror   = "2"
tracing     = "0.1"
futures     = { version = "0.3", default-features = false, features = ["alloc"] }

# Async runtime — needed by luna-cli (tokio main) and luna-mcp-server.
tokio       = { version = "1", default-features = false }

# CLI
clap                 = { version = "4", features = ["derive"] }

# Image encoding (CLI screenshots, golden tests)
image                = { version = "0.25", default-features = false, features = ["png"] }

# SHA-256 of framebuffers for the SNES test-ROM golden suite.
sha2                 = "0.10"

# GUI (luna-gui — desktop application)
# Minimal pixel-rendering stack for the SNES framebuffer: winit owns
# the window + input event loop, pixels uploads a 256×224 RGBA buffer
# to a wgpu texture and upscales to window size with nearest-neighbour.
# Replaced eframe+egui (2026-05-28) — that stack added multi-frame
# wgpu-state caching that interfered with ROM swaps and made every
# perceived rendering bug ambiguous between core and GUI.
winit                = { version = "0.30", features = ["serde"] }
pixels               = "0.17"
rfd                  = "0.15"
dirs                 = "6"
# egui-on-pixels overlay: native-quality menu bar + dropdowns
# rendered via wgpu on the SAME device pixels uses. eframe was
# the wrapper we removed; using egui + egui-wgpu + egui-winit
# directly keeps the integration explicit and pixels-friendly.
# Versions pinned to egui 0.34 + pixels 0.17 — both target wgpu 29,
# so the wgpu::Device handle pixels exposes is the same type egui-wgpu
# expects (mixing two wgpu majors silently breaks the type bridge).
egui                 = "0.34"
egui-wgpu            = "0.34"
egui-winit           = { version = "0.34", default-features = false, features = ["links", "wayland", "x11"] }

# Audio output — cpal cross-platform stream + ringbuf SPSC.
cpal                 = "0.16"
ringbuf              = { version = "0.4", default-features = false, features = ["std"] }

# MCP — Anthropic Rust SDK for Model Context Protocol.
rmcp                 = { version = "0.8", features = ["server", "macros", "schemars", "transport-io"] }
schemars             = "1.0"
base64               = "0.22"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"

[profile.dev]
opt-level = 1   # Émulation à vitesse acceptable même en dev
