[package]
name = "luna-api"
description = "Luna's public stable API — Control, Debug, Semantic and Events traits exposed to every transport"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true

[lints]
workspace = true
