[package]
name = "luna-api"
description = "Luna's public stable API — Control, Debug, Semantic and Events traits exposed to every transport"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
luna-apu       = { workspace = true }
luna-cartridge = { workspace = true }
luna-core      = { workspace = true }
luna-ppu       = { workspace = true }

serde      = { workspace = true, features = ["std", "derive"] }
serde_json = { workspace = true, features = ["std"] }
thiserror  = { workspace = true }
image      = { workspace = true }
schemars   = { workspace = true }

[lints]
workspace = true
