[package]
name = "luna-apu"
description = "SNES Audio Processing Unit — orchestrates the SPC700 and the DSP audio synth"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true

[lints]
workspace = true
