[package]
name = "luna-async"
description = "Cross-target async runtime façade for Luna (native tokio + web wasm-bindgen-futures)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true

[lints]
workspace = true
