[package]
name = "luna-async"
description = "Cross-target async runtime façade for Luna (native tokio + web wasm-bindgen-futures)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
# `std` feature is needed for `futures::channel::mpsc` (it relies on parking
# primitives from std::sync). oneshot lives in `alloc`. WASM (wasm32-unknown-
# unknown) has std available — single-threaded but std::sync still compiles.
futures = { workspace = true, features = ["std"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true, features = ["rt", "time"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = { workspace = true }
gloo-timers          = { workspace = true }

[dev-dependencies]
futures = { workspace = true, features = ["std"] }
tokio   = { workspace = true, features = ["rt", "macros", "time"] }

[lints]
workspace = true
