[package]
name = "luna-bus"
description = "SNES memory map, cartridge mappers and the Bus trait with mid-instruction io_cycle()"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true

[lints]
workspace = true
