[package]
name = "luna-cartridge"
description = "SNES ROM parsing — internal header detection, mapper inference, SRAM handling"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true

[lints]
workspace = true
