[package]
name = "luna-cartridge"
description = "SNES ROM parsing — internal header detection, mapper inference, SRAM handling"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
luna-bus  = { workspace = true }
thiserror = { workspace = true }
# Save-state: serde derive on the cartridge Region enum.
serde     = { workspace = true, features = ["std", "derive"] }

[lints]
workspace = true
