[package]
name = "luna-cli"
description = "Luna SNES emulator — command-line entry point dispatching between run / mcp / replay modes"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true

[[bin]]
name = "luna"
path = "src/main.rs"

[lints]
workspace = true
