[package]
name = "luna-cli"
description = "Luna SNES emulator — command-line entry point dispatching between run / mcp / replay modes"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true

[[bin]]
name = "luna"
path = "src/main.rs"

[dependencies]
luna-api        = { workspace = true }
luna-cartridge  = { workspace = true }
luna-core       = { workspace = true }
luna-mcp-server = { workspace = true }
luna-ppu        = { workspace = true }

clap       = { workspace = true }
image      = { workspace = true }
thiserror  = { workspace = true }
serde_json = { workspace = true, features = ["std"] }
tokio      = { workspace = true, features = ["macros", "rt-multi-thread", "io-std"] }

[lints]
workspace = true
