[package]
name = "luna-cli"
description = "Luna SNES emulator — command-line entry point dispatching between run / mcp / replay modes"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true

[[bin]]
name = "luna"
path = "src/main.rs"

[dependencies]
# API-first: the CLI drives the emulator only through luna-api (+ the MCP
# transport). No direct deps on luna-core / luna-ppu / luna-apu / luna-cartridge.
luna-api        = { workspace = true }
luna-mcp-server = { workspace = true }

clap       = { workspace = true }
serde_json = { workspace = true, features = ["std"] }
tokio      = { workspace = true, features = ["macros", "rt-multi-thread", "io-std"] }

[lints]
workspace = true
