[package]
name = "luna-core"
description = "SNES emulator core — assembles every component and runs the CPU-driven master-clock scheduler"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
# luna-coproc and luna-dma used to be separate crates; they were
# only ever consumed by luna-core and have been folded in as
# `crate::coproc` and `crate::dma` modules (see `src/coproc/` and
# `src/dma/`).
luna-apu        = { workspace = true }
luna-bus        = { workspace = true }
luna-cartridge  = { workspace = true }
luna-cpu-65c816 = { workspace = true }
luna-cpu-upd96050 = { workspace = true }
luna-ppu        = { workspace = true }
# Save-state: serde derives on the Snes tree + bincode encode (coproc mappers).
serde       = { workspace = true, features = ["std", "derive"] }
serde_bytes = { workspace = true }
bincode     = { workspace = true }

[dev-dependencies]
# SNES test-ROM golden suite (tests/snes_test_roms.rs): hash the
# framebuffer and, in record mode, dump a PNG to eyeball.
sha2  = { workspace = true }
image = { workspace = true }

[lints]
workspace = true
