[package]
name = "luna-cpu-65c816"
description = "Cycle-accurate 65C816 CPU implementation for the SNES main processor"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
luna-bus = { workspace = true }

[dev-dependencies]
luna-bus = { workspace = true, features = ["test-utils"] }

[lints]
workspace = true
