[package]
name = "luna-cpu-65c816"
description = "Cycle-accurate 65C816 CPU implementation for the SNES main processor"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
luna-bus = { workspace = true }

[dev-dependencies]
luna-bus   = { workspace = true, features = ["test-utils"] }
# Tom Harte JSON tests integration (see tests/tom_harte.rs).
serde      = { workspace = true, features = ["std"] }
serde_json = { workspace = true, features = ["std"] }

[lints]
workspace = true
