[package]
name = "luna-cpu-spc700"
description = "SPC700 CPU implementation for the SNES audio coprocessor"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true

[features]
default = []
# Enables a flat 64 KB RamBus for downstream tests.
test-utils = []

[lints]
workspace = true
