[package]
name = "luna-dma"
description = "SNES DMA and HDMA controllers (8 channels each)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
luna-bus = { workspace = true }

[lints]
workspace = true
