[package]
name = "luna-gui"
description = "Luna SNES emulator — desktop GUI (eframe / egui / wgpu)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true

[[bin]]
name = "luna-gui"
path = "src/main.rs"

[dependencies]
luna-apu       = { workspace = true }
luna-bus       = { workspace = true }
luna-cartridge = { workspace = true }
luna-core      = { workspace = true }
luna-ppu       = { workspace = true }

eframe     = { workspace = true }
egui       = { workspace = true }
rfd        = { workspace = true }
cpal       = { workspace = true }
ringbuf    = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
