[package]
name = "luna-gui"
description = "Luna SNES emulator — desktop GUI (winit / pixels / wgpu)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true

[[bin]]
name = "luna-gui"
path = "src/main.rs"

[dependencies]
luna-bus       = { workspace = true }
luna-cartridge = { workspace = true }
luna-core      = { workspace = true }
luna-ppu       = { workspace = true }

winit      = { workspace = true }
pixels     = { workspace = true }
rfd        = { workspace = true }
egui       = { workspace = true }
egui-wgpu  = { workspace = true }
egui-winit = { workspace = true }
cpal       = { workspace = true }
ringbuf    = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
image      = { workspace = true }

[lints]
workspace = true
