[package]
name = "luna-gui"
description = "Luna SNES emulator — desktop GUI (winit / pixels / wgpu)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true

[[bin]]
name = "luna-gui"
path = "src/main.rs"

[dependencies]
# API-first (.claude/rules/api-first.md): the GUI drives the emulator
# only through luna-api, never luna-core / luna-ppu / luna-bus /
# luna-cartridge directly. That keeps the CLI/MCP/GUI on one shared
# observation+control surface so they cannot diverge.
luna-api = { workspace = true }

winit      = { workspace = true }
pixels     = { workspace = true }
rfd        = { workspace = true }
egui       = { workspace = true }
egui-wgpu  = { workspace = true }
egui-winit = { workspace = true }
# Blocks on the wgpu adapter/device futures when opening a debug window.
pollster   = "0.4"
cpal       = { workspace = true }
ringbuf    = { workspace = true }
triple_buffer = "8"
serde      = { workspace = true }
serde_json = { workspace = true }
image      = { workspace = true }

[lints]
workspace = true
