[package]
name = "luna-mcp-core"
description = "Cross-target MCP types — Tool/Resource definitions and JSON schemas, no runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true

[lints]
workspace = true
