[package]
name = "luna-mcp-server"
description = "MCP server for Luna — native-only (rmcp + tokio + axum). Does NOT build for wasm32-unknown-unknown."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true

[lints]
workspace = true
