[package]
name = "luna-overlay"
description = "Spectator-mode GUI overlays — agent activity timeline, queried-region highlights, token-budget tracker"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true

[lints]
workspace = true
